--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "google-auth-library": "^9.2.0"
+    "google-auth-library": "^9.2.0",
+    "implement-js": "^0.0.31",
+    "mysql": "^2.18.1"
   }
 }
